--- a/css/style.css
+++ b/css/style.css
@@ -21,12 +21,12 @@ text-transform: uppercase;
 	color: #f74d65;
 }
 header{
-	background: url(../images/header_bg.jpg);
+	background: url(../images/header2_bg.png);
 	background-size: cover;
 	background-repeat: no-repeat;
 }
 .section_overlay{
-	background: rgba(250,250,250, .5);
+	/*background: rgba(250,250,250, .100);*/
 }
 .home_text{
 	padding-top: 210px;
